k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: expressapiapp
  name: expressapiapp
spec:
  replicas: 2
  selector:
    matchLabels:
      run: expressapiapp
  template:
    metadata:
      labels:
        run: expressapiapp
    spec:
      containers:
      - image: gcr.io/nickgketerraformdemoproject/myimage
        name: expressapiapp
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: expressapiapp
spec:
  selector:
     run: expressapiapp
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 8080
  type: LoadBalancer
